[package]
name = "deposits_script"
version = "0.1.0"
authors = ["pawan <pawandhananjay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.21", features = ["full"] }
futures = "0.3.5"
reqwest = "0.10.6"
serde_json = "1.0.52"
hex = "0.4.2"
eth2_ssz = "0.1.2"
