[package]
name = "deposits_script"
version = "0.1.0"
authors = ["pawan <pawandhananjay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.22", features = ["full"] }
futures = "0.3.5"
reqwest = { version = "0.10.8", features = ["native-tls-vendored"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
ethereum-types = "0.9.2"
hex = "0.4.2"
eth2_ssz = "0.1.2"
